<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="40sp"
        android:text="@string/intro"
        android:id="@+id/intro" />

    <Button
        android:id="@+id/intro_register"
        android:text="@string/intro_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:text="@string/or"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/intro_login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" />



</LinearLayout>